--- a/flexbox/style.css
+++ b/flexbox/style.css
@@ -2,21 +2,65 @@
   box-sizing: border-box;
 }
 
-
+/* The section itself */
+.boxes {
+  display: flex;
+  /* justify-content: space-evenly; */
+  flex-wrap: wrap;
+}
 
 /* Each div in the "boxes" section */
 .boxes div {
+  flex-grow: 1;
+  flex-basis: 200px;
+
   padding: .5em;
   background-color: orange;
   border: 2px solid rebeccapurple;
   margin-bottom: .5em;
+  /* margin-left: .5em;
+  margin-right: .5em; */
+}
+
+/* .boxes div.a {
+  flex-grow: 1;
+}
+
+.boxes div.b {
+  flex-grow: 2;
+} */
+
+
+/* images section */
+.images {
+  margin: 1em 0;
+  /* display: flex; */
+}
+
+.column {
+  flex-basis: 50%;
+}
+
+.flex-pool {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+/* inner pools */
+.flex-pool > div {
+  /* flex-basis: 100%; */
+  display: flex;
+  justify-content: space-around;
+}
+
+.card {
+  border: 1px solid black;
+  border-radius: 10px;
+  margin-bottom: 1em;
 }
 
 img {
   width: 300px;
 }
 
-/* images section */
-.images {
-  margin: 1em 0;
-}
